[package]
name = "room"
version = "0.1.0"
edition = "2021"

[features]
default = ["fdb/fdb-7_1"]

[dependencies.uuid]
version = "0.8.2"

[dependencies]
wasmtime = "0.37.0"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
fdb = "0.3.1"
bytes =  "1.1.0"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = "0.3"
int-enum = "0.4.0"
assert-str = "0.1.0"
tungstenite = "0.17.1"
tokio-tungstenite = "0.17.1"
log ="0.4.17"
env_logger = "0.9.0"