# Note this workspace is only really used for IDE (in my case CLion) purposes.
# Building at the root with cargo build (as opposed to using cargo-make) will
# build the 'driver' as native (not wasm) code, which is incorrect.

# The correct way to exercise the build for the whole project is via "cargo make"
[workspace]

members = [
    "value",
    "engine",
    "driver",
]
