[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level ="z"
panic = "abort"

[dependencies]
uuid = { version = "0.8.2", default-features = false }
int-enum = "0.4.0"

[dependencies.value]
path = "../value"
version = "0.1.0"

[dependencies.serde]
version = "1.0.137"
# default features off so we can do no_std
default-features = false
