[package]
name = "value"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
int-enum = "0.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
bytes = "1.1.0"

[dependencies.uuid]
version = "0.8.2"
features = ["serde"]

